# palateful

./: .env.example  .gitignore  CLAUDE.md  README.md  TODO.md  docker-compose.yml  package.json  pyproject.toml  vercel.json
libraries/agent/: README.md  project.json  pyproject.toml
libraries/agent/agent/: __init__.py  config.py  runner.py  tasks.py
libraries/agent/agent/graph/: __init__.py  graph.py  nodes.py  state.py
libraries/agent/agent/llm/: __init__.py  anthropic.py  ollama.py  openai.py  provider.py
libraries/agent/agent/tools/: __init__.py  base.py  pantry.py  preferences.py  recipes.py
libraries/agent/tests/: __init__.py  conftest.py  test_graph.py  test_llm.py  test_tools.py
libraries/test-helper/: README.md  project.json  pyproject.toml
libraries/test-helper/test_helper/: __init__.py  conftest.py  environment.py
libraries/test-helper/test_helper/factories/: __init__.py  ingredient_factory.py  pantry_factory.py  recipe_book_factory.py  thread_factory.py  user_factory.py
libraries/utils/: README.md  project.json  pyproject.toml
libraries/utils/src/palateful_utils/: __init__.py
libraries/utils/src/palateful_utils/db/: __init__.py  session.py
libraries/utils/src/palateful_utils/db/models/: chat.py  unit.py  user.py
libraries/utils/src/palateful_utils/units/: __init__.py  constants.py  conversion.py
libraries/utils/utils/: constants.py
libraries/utils/utils/api/: api_exception.py  api_request.py  endpoint.py
libraries/utils/utils/classes/: enum.py  error_code.py
libraries/utils/utils/db/: __init__.py  base.py  models.py
libraries/utils/utils/models/: __init__.py  active_timer.py  base.py  chat.py  cooking_log.py  friend_request.py  friendship.py  import_item.py  import_job.py  ingredient.py  ingredient_match.py  ingredient_substitution.py  joins_base.py  meal_event.py  meal_event_participant.py  notification.py  pantry.py  pantry_ingredient.py  pantry_user.py  parser_job.py  prep_step.py  recipe.py  recipe_book.py  recipe_book_user.py  recipe_ingredient.py  recipe_step.py  shopping_list.py  shopping_list_event.py  shopping_list_user.py  suggestion.py  thread.py  unit.py  user.py
libraries/utils/utils/services/: advisory_lock.py  auth0.py  aws.py  celery.py  database.py  push_notification.py
libraries/utils/utils/services/helpers/: encoder.py
libraries/utils/utils/services/recipe_extractors/: __init__.py  ai_extractor.py  base.py  json_ld.py
libraries/utils/utils/services/units/: __init__.py  conversion.py
libraries/utils/utils/tasks/: __init__.py  task.py
libraries/utils/utils/tasks/import_tasks/: __init__.py  create_recipe_task.py  extract_recipe_task.py  match_ingredients_task.py  parse_source_task.py
libraries/utils/utils/tasks/shopping_list_tasks/: __init__.py  deadline_reminder_task.py
services/api/: Dockerfile  project.json  pyproject.toml
services/api/src/: __init__.py  config.py  dependencies.py  main.py  manage.py
services/api/src/api/v1/friends/: __init__.py  accept_request.py  cancel_request.py  decline_request.py  get_friend.py  list_friends.py  list_requests.py  remove_friend.py  send_request.py
services/api/src/api/v1/import_job/: __init__.py  approve_import_item.py  cancel_import_job.py  get_import_item.py  get_import_job.py  list_import_items.py  (+3 more)
services/api/src/routers/: health.py  users.py  v1_router.py
services/api/src/routers/v1/: __init__.py  friends_router.py  health_router.py  import_router.py  ingredient_router.py  meal_event_router.py  parser_router.py  recipe_book_router.py  recipe_router.py  shopping_list_router.py  timer_router.py  user_router.py
services/api/src/schemas/: __init__.py  import_job.py  ingredient.py  meal_event.py  recipe.py  recipe_book.py  shopping_list.py  timer.py  user.py
services/api/src/services/: auth0.py
services/eval/: .env.eval.example  .gitignore  README.md  eval.config.yaml  project.json  pyproject.toml
services/eval/datasets/ingredient_matching/: cases.yaml
services/eval/datasets/ocr/: manifest.yaml
services/eval/datasets/recipe_extraction/: manifest.yaml
services/eval/src/: __init__.py  config.py  main.py  runner.py
services/eval/src/evaluators/: __init__.py  base.py  ingredient_matching_evaluator.py  ocr_evaluator.py  recipe_extraction_evaluator.py
services/eval/src/metrics/: __init__.py  cost_metrics.py  struct_metrics.py  text_metrics.py
services/eval/src/reporters/: __init__.py  console.py  html_reporter.py  json_reporter.py
services/ingredient-scraper/: README.md  project.json  pyproject.toml
services/ingredient-scraper/src/: __init__.py  config.py  main.py
services/ingredient-scraper/src/models/: __init__.py  scraped_ingredient.py
services/ingredient-scraper/src/output/: __init__.py  csv_writer.py  stats.py
services/ingredient-scraper/src/pipeline/: __init__.py  categorizer.py  deduplicator.py  enricher.py  normalizer.py
services/ingredient-scraper/src/scrapers/: __init__.py  base.py  openfoodfacts.py  themealdb.py  usda.py
services/ingredient-scraper/tests/: __init__.py  test_categorizer.py  test_models.py  test_normalizer.py
services/migrator/: Dockerfile  alembic.ini  project.json  pyproject.toml
services/migrator/alembic/: env.py
services/migrator/migrations/: env.py
services/migrator/migrations/versions/: 001_initial.py  2026011704109_5b51adc124d5_initial_models_for_recipe_books.py  20260117041822_525891f38d8b_suggestion_and_notification_models.py  20260119000001_add_default_recipe_book_id.py  20260129000001_add_calendar_meal_planning_models.py  20260129000002_add_import_system_models.py  20260130000001_add_shared_shopping_cart.py  20260130000002_add_friends_social_system.py  20260131000001_add_parser_jobs.py
services/migrator/seeds/: ingredients.py
services/ocr/: Dockerfile  Dockerfile.gpu  project.json  pyproject.toml  run_job.py
services/ocr/src/: __init__.py  main.py
services/parser/: Dockerfile  Dockerfile.batch  Dockerfile.gpu  project.json  pyproject.toml
services/parser/src/: config.py  model.py
services/worker/: Dockerfile  project.json  pyproject.toml
services/worker/src/: main.py
(+289 files in other folders)
