[tool.coverage.run]
branch = true
source = [ "agent" ]

[tool.coverage.report]
exclude_lines = ['if TYPE_CHECKING:', 'pragma: no cover']
show_missing = true

[tool.pytest.ini_options]
addopts = "--cov --cov-report html:'../../coverage/libraries/agent/html' --cov-report xml:'../../coverage/libraries/agent/coverage.xml' --html='../../reports/libraries/agent/unittests/html/index.html' --junitxml='../../reports/libraries/agent/unittests/junit.xml'"
asyncio_mode = "auto"

[tool.poetry]
name = "agent"
version = "1.0.0"
description = "AI suggestion agent library for Palateful - LangGraph-based meal suggestions"
authors = [ ]
license = 'Proprietary'
readme = 'README.md'
exclude = [
    "agent/.pytest_cache",
    "agent/.coverage",
    "agent/__pycache__",
    "**/.pytest_cache/**",
    "**/*.pyc"
]

  [[tool.poetry.packages]]
  include = "agent"

  [tool.poetry.dependencies]
  python = "^3.13"
  langgraph = "^1.0.6"
  langchain-core = "^1.2.7"
  langchain-openai = "^1.1.7"
  langchain-anthropic = "^1.3.1"
  openai = "^2.8.1"
  anthropic = "^0.76"
  httpx = "^0.27"
  sentence-transformers = "^3.3"
  pydantic = "^2.0"
  pydantic-settings = "^2.0"
  sqlalchemy = "^2.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11"
pytest = "^8.0"
pytest-cov = "^6.0"
pytest-html = "^4.0"
pytest-asyncio = "^0.24"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
