[tool.poetry]
name = "palateful-utils"
version = "0.1.0"
description = "Shared utilities for Palateful services"
authors = ["Leonid Belyi"]
packages = [{include = "palateful_utils", from = "src"}]

[tool.poetry.dependencies]
python = "^3.13"
sqlalchemy = {extras = ["asyncio"], version = "^2.0"}
asyncpg = "^0.30"
pgvector = "^0.4"
pydantic = "^2.0"
pydantic-settings = "^2.0"
python-jose = {extras = ["cryptography"], version = "^3.3"}
httpx = "^0.28"
redis = "^5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
