[tool.poetry]
name = "api"
version = "0.1.0"
description = "Palateful FastAPI backend"
authors = ["Leonid Belyi"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.120"
uvicorn = {extras = ["standard"], version = "^0.34"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0"}
asyncpg = "^0.30"
pgvector = "^0.4"
pydantic = {extras = ["email"], version = "^2.0"}
pydantic-settings = "^2.0"
python-jose = {extras = ["cryptography"], version = "^3.3"}
httpx = "^0.27"
redis = "^5.0"
openai = "^2.8"
sse-starlette = "^2.0"
python-multipart = "^0.0.20"
utils = {path = "../../libraries/utils", develop = true}
psycopg2-binary = "^2.9.11"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11"
pytest = "^8.0"
pytest-cov = "^6.0"
pytest-html = "^4.0"
pytest-asyncio = "^0.25"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
