[tool.poetry]
name = "palateful-migrator"
version = "0.1.0"
description = "Database migrations for Palateful"
authors = ["Leonid Belyi"]
packages = []

[tool.poetry.dependencies]
python = "^3.13"
alembic = "^1.14"
sqlalchemy = {extras = ["asyncio"], version = "^2.0"}
asyncpg = "^0.30"
pgvector = "^0.4"
psycopg2-binary = "^2.9"  # Needed for sync Alembic operations
palateful-utils = {path = "../../libraries/utils", develop = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
